--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<td width="389">
 		<img border="0" src="HW1/HW1.gif" width="389" height="253"></td>
 		<td width="446">
-		<img border="0" src="" width="435" height="246"></td>
+		<img border="0" src="HW2/HW2.gif" width="435" height="246"></td>
 		<td width="446">
 		<img border="0" src="" width="444" height="251"></td>
 		
@@ -20,8 +20,8 @@
 		HW1.html</a></td>
 		<td width="447">
 		<p align="center">
-		<a >
-		</a></td>
+		<a href="https://tengshine.github.io/3W3D/HW2/HW2">
+		HW2.html</a></td>
 		<td width="447">
 		<p align="center">
 		<a >
