--- a/objLoader/new.html
+++ b/objLoader/new.html
@@ -14,7 +14,7 @@ body {
 <body> 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
-<script src="http://jyunming-chen.github.io/tutsplus/js/OrbitControls.js"></script>
+<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
 <script src="https://jyunming-chen.github.io/tutsplus/js/loaders/OBJLoader.js"></script>
 <script src="https://jyunming-chen.github.io/tutsplus/js/loaders/MTLLoader.js"></script>
 
