--- a/objLoader/new.html
+++ b/objLoader/new.html
@@ -53,7 +53,7 @@ function init() {
 
   controls = new THREE.OrbitControls(camera, renderer.domElement);
 
-  var gridxz = new THREE.GridHelper (200, 20,'red','white');
+  var gridXZ = new THREE.GridHelper (200, 20,'red','white');
   scene.add(gridXZ);
 
   var pointLight = new THREE.PointLight(0xffffff);
