--- a/objLoader/new.html
+++ b/objLoader/new.html
@@ -84,7 +84,7 @@ function init() {
 
 		var objLoader = new THREE.OBJLoader();
 		objLoader.setMaterials( materials );
-		objLoader.setBaseUrl( 'nissan-gt-r-nismo-obj/' );
+		//objLoader.setBaseUrl( 'nissan-gt-r-nismo-obj/' );
 		objLoader.setPath('nissan-gt-r-nismo-obj/');
 		objLoader.load('nissan-gt-r-nismo.obj',function(object) {
       toycar = object;
