--- a/objLoader/new.html
+++ b/objLoader/new.html
@@ -77,16 +77,16 @@ function init() {
     });
 */
 	var mtlloader = new THREE.MTLLoader();
-	mtlloader.setBaseUrl( 'nissan-gt-r-nismo-obj/' );
-	mtlloader.setPath('nissan-gt-r-nismo-obj/');
-	mtlloader.load('nissan-gt-r-nismo.mtl',function(materials){
+	mtlloader.setBaseUrl( 'camero-2010-low-poly-obj' );
+	mtlloader.setPath('camero-2010-low-poly-obj');
+	mtlloader.load('camero-2010-low-poly.mtl',function(materials){
 		materials.preload();
 
 		var objLoader = new THREE.OBJLoader();
 		objLoader.setMaterials( materials );
 		//objLoader.setBaseUrl( 'nissan-gt-r-nismo-obj/' );
-		objLoader.setPath('nissan-gt-r-nismo-obj/');
-		objLoader.load('nissan-gt-r-nismo.obj',function(object) {
+		objLoader.setPath('camero-2010-low-poly-obj');
+		objLoader.load('camero-2010-low-poly.obj',function(object) {
       toycar = object;
       scene.add(toycar);
     	toycar.scale.set(3.5, 3.5, 3.5);
