--- a/objLoader/new.html
+++ b/objLoader/new.html
@@ -4,6 +4,14 @@
 
 <head>
 <style>
+#info {
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  color: #ffff00
+}
 body {
   overflow: hidden;
 }
@@ -12,7 +20,7 @@ body {
 </head>
 
 <body> 
-
+<div id="info"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
 <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
 <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/loaders/OBJLoader.js"></script>
