--- a/objLoader/new.html
+++ b/objLoader/new.html
@@ -41,8 +41,7 @@ var pos, vel, force,power=1;
 var mass = 1;
 var clock = new THREE.Clock();
 var angle=0,theta=0;
-var objLoader;
-
+var theObject;
 
 init();
 animate();
@@ -98,19 +97,19 @@ var onProgress = function(xhr) {
   };
 
   var onError = function(xhr) {};
-  
+
 	var mtlloader = new THREE.MTLLoader();
 	mtlloader.setBaseUrl( 'porsche-cayman-obj/' );
 	mtlloader.setPath('porsche-cayman-obj/');
 	mtlloader.load('porsche-cayman.mtl',function(materials){
 		materials.preload();
 
-		objLoader = new THREE.OBJLoader();
+		var objLoader = new THREE.OBJLoader();
 		objLoader.setMaterials( materials );
 		//objLoader.setBaseUrl( 'nissan-gt-r-nismo-obj/' );
 		objLoader.setPath('porsche-cayman-obj/');
 		objLoader.load('porsche-cayman.obj',function(object) {
-		var theObject =  unitize (object, 20);
+		theObject =  unitize (object, 20);
       //toycar = object;
       scene.add(theObject);
 	  scene.add (new THREE.BoxHelper (theObject));
@@ -221,9 +220,9 @@ function animate() {
 	//var z = 30 * Math.sin(angle);
 
 	//if (turn) {  // this is error-prone
-	if (objLoader !== undefined && turn) {
-		objLoader.position.copy(pos);
-		objLoader.rotation.y = angle-Math.PI/2 ;
+	if (theObject !== undefined && turn) {
+		theObject.position.copy(pos);
+		theObject.rotation.y = angle-Math.PI/2 ;
 		//angle -= dt;
 	}
 
