--- a/objLoader/new.html
+++ b/objLoader/new.html
@@ -36,7 +36,7 @@ var controls;
 var keyboard = new KeyboardState();
 var brakeOn = false;
 var turn = 1;
-var toycar;
+var toycar= new THREE.Object3D();;
 var pos, vel, force,power=1;
 var mass = 1;
 var clock = new THREE.Clock();
