--- a/objLoader/new.html
+++ b/objLoader/new.html
@@ -75,6 +75,7 @@ scene.add(camera);
 
   var ambientLight = new THREE.AmbientLight(0x111111);
   scene.add(ambientLight);
+window.addEventListener ('resize', onWindowResize, false);
 
   ///////////////////////////////////////////////
 /*  var loader = new THREE.OBJMTLLoader();
@@ -166,10 +167,16 @@ function unitize (object, targetSize) {
 			
 }
 
+function onWindowResize ()
+{
+	camera.aspect = window.innerWidth / window.innerHeight;
+	camera.updateProjectionMatrix();
+	renderer.setSize (window.innerWidth, window.innerHeight);
+}
 
 function computeForce() {
 	  
-	force=new THREE.Vector3(power,0,0).applyAxisAngle(new THREE.Vector3(0,1,0),angle+theta).multiplyScalar(26);
+	//force=new THREE.Vector3(power,0,0).applyAxisAngle(new THREE.Vector3(0,1,0),angle+theta).multiplyScalar(26);
   //power=new THREE.Vector3(0,0,0);
   //power.add(force.clone().multiplyScalar(vel));
   // engine force
@@ -178,22 +185,52 @@ function computeForce() {
   }
  
   // resistance force
-  var alpha = 3.50;  
-  force.add(vel.clone().multiplyScalar(-alpha));
+  
 }
 
 function animate() {
 
-	
+	//computeForce();
 	var dt = clock.getDelta();
 	
-	
-	
-	
-	//var x = 30 * Math.cos(angle);
-	//var z = 30 * Math.sin(angle);
+	//var dir = new THREE.Vector3(1,0,0);
+	theta=0;
+	//dir.multiplyScalar (dt*speed);
+	//dir.applyAxisAngle (new THREE.Vector3(0,1,0), angle);
+	force=new THREE.Vector3(power,0,0).multiplyScalar (dt*power).applyAxisAngle (new THREE.Vector3(0,1,0), theta);
+	//pos.add (dir); 
+	var alpha = 3.50;  
+	force.add(vel.clone().multiplyScalar(-alpha));
 
-	//if (turn) {  // this is error-prone
+	
+	/*brakeOn = false;
+	if (keyboard.down("space")) {
+		brakeOn = true;
+	}
+	if (keyboard.pressed("right")) {
+		theta=-0.31;
+	}
+	if (keyboard.pressed("left")) {
+		theta=+0.31;   
+	}
+	
+	if (keyboard.pressed("up")) {
+		power+=0.1;  
+	}
+	if (keyboard.pressed("down")) {
+		power-=0.1;
+		if(power<0)power=0;
+	}
+	*/
+	vel.add(force.clone().multiplyScalar(dt / mass));
+
+	// pos = pos - vel * dt
+	pos.sub(vel.clone().multiplyScalar(dt));
+
+	if(vel.length()>0.01){
+		theta=Math.atan2(-vel.z,vel.x);
+	}
+	
 	if (toycar !== undefined && turn) {
 		toycar.scale.set (0.2,0.2,0.2);
 		toycar.position.copy(pos);
@@ -203,44 +240,30 @@ function animate() {
 		//angle -= dt;
 	}
 
-	
-
 	requestAnimationFrame(animate);
 	render();
 }
-function drive(){
+
+function myclamp(x,lo,hi)
+{
+	if (x < lo) return lo;
+	if (x > hi) return hi;
+	return x;
+}
+function update()
+{
 	controls.update();
-	keyboard.update();
-	theta=0;
-	brakeOn = false;
-	if (keyboard.down("space")) {
-		brakeOn = true;
-	}
-	if (keyboard.pressed("right")) {
-		theta=-0.31;
-	}
-	if (keyboard.pressed("left")) {
-		theta=0.31;   
-	}
-	if (keyboard.down("home")) {
-		power=1;
-	}
-	if (keyboard.pressed("up")) {
-		power+=0.1;  
-	}
-	if (keyboard.pressed("down")) {
-		power-=0.1;
-		if(power<0)power=0;
-	}
-	computeForce();
-	vel.add(force.clone().multiplyScalar(dt / mass));
-
-	// pos = pos - vel * dt
-	pos.sub(vel.clone().multiplyScalar(dt));
-
-	if(vel.length()>0.01){
-		angle=Math.atan2(-vel.z,vel.x);
-	}
+	keyboard.update(); 
+		
+	if ( keyboard.pressed("left") ) 
+		theta += 0.01;               
+	if ( keyboard.pressed("right") )
+		theta -= 0.01;               
+	if ( keyboard.pressed("up") )  
+		power += 0.5;        
+	if ( keyboard.pressed("down") )  
+		power -= 0.5;    
+	power = myclamp (power, 0.0, 20.0);		
 }
 
 function render() {
