--- a/objLoader/new.html
+++ b/objLoader/new.html
@@ -174,61 +174,18 @@ function onWindowResize ()
 	renderer.setSize (window.innerWidth, window.innerHeight);
 }
 
-function computeForce() {
-	  
-	//force=new THREE.Vector3(power,0,0).applyAxisAngle(new THREE.Vector3(0,1,0),angle+theta).multiplyScalar(26);
-  //power=new THREE.Vector3(0,0,0);
-  //power.add(force.clone().multiplyScalar(vel));
-  // engine force
-  if (brakeOn){
-  	power=0;
-  }
- 
-  // resistance force
-  
-}
 
 function animate() {
 
 	
 	var dt = clock.getDelta();
 	
-	//var dir = new THREE.Vector3(1,0,0);
 	
-	//dir.multiplyScalar (dt*speed);
-	//dir.applyAxisAngle (new THREE.Vector3(0,1,0), angle);
-	force=new THREE.Vector3(power,0,0).multiplyScalar (dt*power).applyAxisAngle (new THREE.Vector3(0,1,0), theta);
-	//pos.add (dir); 
+	var dir = new THREE.Vector3(1,0,0);
 	
-
+	dir.multiplyScalar (dt*power).applyAxisAngle (new THREE.Vector3(0,1,0), theta);
+	pos.add (dir); 
 	
-	/*brakeOn = false;
-	if (keyboard.down("space")) {
-		brakeOn = true;
-	}
-	if (keyboard.pressed("right")) {
-		theta=-0.31;
-	}
-	if (keyboard.pressed("left")) {
-		theta=+0.31;   
-	}
-	
-	if (keyboard.pressed("up")) {
-		power+=0.1;  
-	}
-	if (keyboard.pressed("down")) {
-		power-=0.1;
-		if(power<0)power=0;
-	}
-	*/
-	vel.add(force.clone().multiplyScalar(dt / mass));
-
-	// pos = pos - vel * dt
-	pos.sub(vel.clone().multiplyScalar(dt));
-
-	if(vel.length()>0.01){
-		theta=Math.atan2(-vel.z,vel.x);
-	}
 	
 	if (toycar !== undefined && turn) {
 		toycar.scale.set (0.2,0.2,0.2);
@@ -236,8 +193,9 @@ function animate() {
 		box.position.copy(pos);
 		toycar.rotation.y = angle-Math.PI/2 ;
 		box.rotation.y = angle-Math.PI/2 ;
-		//angle -= dt;
+		
 	}
+	
 	update();
 	requestAnimationFrame(animate);
 	render();
@@ -253,16 +211,21 @@ function update()
 {
 	controls.update();
 	keyboard.update(); 
-		
+	
+	brakeOn = false;
+	if (keyboard.down("space")) {
+		brakeOn = true;
+	}
 	if ( keyboard.pressed("left") ) 
-		theta += 0.01;               
+		theta+=0.31;              
 	if ( keyboard.pressed("right") )
-		theta -= 0.01;               
+		theta-=0.31;              
 	if ( keyboard.pressed("up") )  
-		power += 0.5;        
+		power+=0.1;        
 	if ( keyboard.pressed("down") )  
-		power -= 0.5;    
-	power = myclamp (power, 0.0, 20.0);		
+		power-=0.1;    
+	power = myclamp (power, 0.0, 20.0);
+	
 }
 
 function render() {
