--- a/objLoader/new.html
+++ b/objLoader/new.html
@@ -230,6 +230,7 @@ function myclamp(x,lo,hi)
 }
 function update()
 {
+	theta=0;
 	controls.update();
 	keyboard.update();
 	if (keyboard.down("space")) {
