--- a/HW3/HW3.html
+++ b/HW3/HW3.html
@@ -51,7 +51,7 @@ var pickables = [];
 var draws=[];
 var i=11;
 var box = new THREE.Object3D();
-
+var skull1=new THREE.Object3D();
 init();
 animate();
 
