--- a/HW3/HW3.html
+++ b/HW3/HW3.html
@@ -285,7 +285,7 @@ function init() {
 		  
 			scene.add(theObject);
 			//scene.add (box = new THREE.BoxHelper (theObject));
-			box.add(theObject);
+			//box.add(theObject);
 			
 			object.traverse (
 				function(mesh) {
