--- a/HW3/HW3.html
+++ b/HW3/HW3.html
@@ -219,7 +219,7 @@ function init() {
 	var torusKnot = new THREE.Mesh( geometry, material );
 	torusKnot.position.set(45,30,30);
 	torusKnot.name="11";
-	//torusKnots.add( torusKnot );
+	torusKnots.add( torusKnot );
 	
 	var geometry = new THREE.TorusKnotBufferGeometry( 5, 3, 100, 16 );
 	var material = new THREE.MeshLambertMaterial( { color: 0xdddddd } );
@@ -299,7 +299,7 @@ function init() {
 		}, onProgress, onError);
 	
 	});
-	skull1.position.set(45,30,30);
+	torusKnot.position.set(45,30,30);
   
   
   
