--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<td width="446">
 		<img border="0" src="HW2/HW2.gif" width="435" height="246"></td>
 		<td width="446">
-		<img border="0" src="" width="444" height="251"></td>
+		<img border="0" src="HW3/HW3.gif" width="444" height="251"></td>
 		
 		
 	</tr>
@@ -24,7 +24,7 @@
 		HW2.html</a></td>
 		<td width="447">
 		<p align="center">
-		<a >
+		<a href="https://tengshine.github.io/3W3D/HW3/HW3">
 		 </a>
 	</tr>
 </table>
